[MR] Instrumentation command change.